# CHIP-8-Emulator

./: Cargo.toml  README.md
src/: Chip8.rs  main.rs  platform.rs
