[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "Chip8"
path = "src/chip8.rs"

[[bin]]
name = "Platform"
path = "src/platform.rs"

[[bin]]
name = "Main"
path = "src/main.rs"

[dependencies]
rand = "0.8"
sdl2 = "*"